# vector-reorder

./: .gitignore  BENCHMARKING.md  BP_NOTES.md  BP_REORDER_SCRIPT.md  E2E_TEST.md  FEATURE.md  KMEANSIMPL.md  NEXT_STEPS.md  REORDER_CONTRACT.md  REPO_SETUP.md  SortingCodec.md  UNDERSTAND_VEC_FILE.md  VEMF_REORDER_CHANGES.md  build.gradle  generate_corrected_neighbors.py  integrate_vord.md  reordering_feature.md  settings.gradle
agent-docs/: BINARY_SWAPPING.md  BP_NOTES.md  CLUSTERING.md  HOTSWAP.md  Life of search request.md  REDUCE_CODE_DUPLICATION.md  REPO_SETUP.md  VEMF_REORDER_CHANGES.md  markdown_cmds_for_test.md
jni/: CMakeLists.txt
jni/include/: org_opensearch_knn_reorder_FaissIndexService.h  org_opensearch_knn_reorder_FaissKMeansService.h
jni/src/: faiss_core.cpp  faiss_core.h  faiss_jni.cpp  faiss_kmeans.cpp
jni/test/: faiss_test.cpp
prod-scripts/: 01_start_cluster.sh  02_ingest_data.sh  03_run_benchmark.sh  04_kill_cluster.sh  05_backup_index.sh  06_restore_index.sh  07_reorder_index.sh  RUNBOOK.md  config.sh  run_all.sh
src/main/java/org/apache/lucene/misc/index/: BpVectorReorderer.java
src/main/java/org/opensearch/knn/reorder/: BinaryFaissIndexRebuilder.java  BpReorderCodec.java  BpReorderTool.java  BpReorderer.java  BpSegmentReorderer.java  CheckIdMapping.java  CheckPreBP.java  ClusterSortTest.java  ClusterSorter.java  DebugMapping.java  E2EBpReorder.java  E2EReorderScript.java  FaissFilePermuter.java  FaissFilePermuterTest.java  FaissIndexRebuilder.java  FaissIndexService.java  FaissKMeansService.java  ForceNativeCodec.java  ForceNativeEnginesFormat.java  KMeansResult.java  KMeansTest.java  KnnFileWriter.java  NativeEnginesOnlyCodec.java  ParseVemf.java  QuantizationStateIO.java  QueryFaissIndex.java  ReorderTool.java  Sift128RebuildTest.java  SortingBpReorder.java  TestFaissSearch.java  VecFileIO.java  VectorReorder.java  VemfFileIO.java  VerifyReorder.java
src/test/: TODO.md
src/test/java/org/opensearch/knn/reorder/: BpReordererTest.java  BpSegmentReordererTest.java  FaissFilePermuterTest.java  FaissIndexRebuilderTest.java  QuantizationStateIOTest.java  VectorReorderTest.java  VemfFileIOTest.java  VerifyIdMapping.java
